; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_national.c_ns_exp_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_national.c_ns_exp_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { i32 }

@NS_EXP_MEM_ADD = common dso_local global i32 0, align 4
@NS_EXP_MEM_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.phy_device*, i32, i32)* @ns_exp_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ns_exp_write(%struct.phy_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.phy_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.phy_device* %0, %struct.phy_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %8 = load i32, i32* @NS_EXP_MEM_ADD, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @phy_write(%struct.phy_device* %7, i32 %8, i32 %9)
  %11 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %12 = load i32, i32* @NS_EXP_MEM_DATA, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @phy_write(%struct.phy_device* %11, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @phy_write(%struct.phy_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
